--- a/FontEnd/src/styles/pages/_utente.scss
+++ b/FontEnd/src/styles/pages/_utente.scss
@@ -1,23 +1,22 @@
 @import "../base/colors";
 
 .utente_main {
+	display: flex;
+	flex-direction: column;
 	height: 100vh;
 	width: 100vw;
 	position: relative;
-	background: #ece9e6; /* fallback for old browsers */
-	background: -webkit-linear-gradient(
-		to right,
-		#ffffff,
-		#ece9e6
-	); /* Chrome 10-25, Safari 5.1-6 */
-	background: linear-gradient(
-		to right,
-		#ffffff,
-		#ece9e6
-	); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 
 	.utente_navbar {
 		background-color: $Principale;
+	}
+	.utente_cards_user {
+		margin-top: 12vh;
+		display: flex;
+		flex-direction: column;
+		justify-content: center;
+		align-items: center;
+		row-gap: 2.5vh;
 	}
 	.utente_container {
 		display: flex;
