--- a/FrontEnd/src/styles/base/_colors.scss
+++ b/FrontEnd/src/styles/base/_colors.scss
@@ -1,4 +1,6 @@
-$Secondario: #6b2b2b;
-$Principale: #250f0ff8;
-$Terziario: #ffffff;
-$Grigio: #f3f3f3;
+:root {
+	--principale: #250f0ff8;
+	--secondario: #6b2b2b;
+	--terziario: #ffffff;
+	--grigio: #f3f3f3;
+}
