--- a/FrontEnd/src/pages/AuthPage/AuthPage.scss
+++ b/FrontEnd/src/pages/AuthPage/AuthPage.scss
@@ -1,14 +1,15 @@
-@import "../base/colors";
+$background-button: rgba(146, 59, 59, 0.972549);
+$border-button: rgba(211, 147, 147, 0.972549);
 
 .auth_main {
-	background-color: $Principale;
+	background-color: var(--principale);
 	height: 100vh;
 	width: 100vw;
 	display: flex;
 	justify-content: center;
 	align-items: center;
 	.auth__container {
-		background-color: $Terziario;
+		background-color: var(--terziario);
 		position: absolute;
 		width: 60%;
 		height: 70%;
@@ -34,16 +35,23 @@
 		.auth__container-f {
 			display: flex;
 			align-items: center;
+			flex-direction: column;
 			overflow: auto;
 			justify-content: center;
 			align-items: center;
 			padding: 0vh 1vw 0vh 1vw;
+			a {
+				font-size: 2vw;
+				text-decoration: none;
+				color: var(--secondario);
+			}
 			form {
 				.home_link {
 					display: flex;
 					justify-content: flex-start;
 					width: 85%;
 					a {
+						font-size: vw;
 						text-decoration: none;
 					}
 				}
@@ -56,11 +64,12 @@
 				justify-content: center;
 				label {
 					display: flex;
+					font-size: 1vw;
 					transition: color 0.7s ease-in-out;
 					justify-content: flex-start;
 					margin-top: 1.5vh;
 					&:hover {
-						color: $Secondario;
+						color: var(--secondario);
 					}
 				}
 				input {
@@ -68,10 +77,11 @@
 					border-bottom: 1px solid #0d96c436;
 					transition: border-color 0.7s ease-in-out;
 					text-align: center;
+					font-size: 1vw;
 
 					&:focus {
 						outline: none;
-						border-color: $Secondario;
+						border-color: var(--secondario);
 					}
 				}
 
@@ -81,44 +91,24 @@
 					button {
 						margin-top: 2vh;
 						font-size: 1.5rem;
-						color: $Terziario;
+						color: var(--terziario);
 						margin-bottom: 2vh;
-						background-color: lighten(
-							$color: $Principale,
-							$amount: 30
-						);
+						background-color: var(--principale);
 						justify-content: center;
 						&:hover {
-							background-color: lighten(
-								$color: $Principale,
-								$amount: 30
-							);
-							color: $Terziario;
-							border-color: lighten(
-								$color: $Principale,
-								$amount: 60
-							);
+							background-color: $background-button;
+							color: var(--terziario);
+							border-color: $border-button;
 						}
+					}
+					a {
+						font-size: 1vw;
 					}
 				}
 
 				.auth__error {
 					color: red;
-				}
-			}
-		}
-	}
-	@media (max-width: 780px) {
-		.auth__container {
-			width: 85%;
-			height: 75%;
-			.auth__imagine {
-				display: none;
-			}
-
-			.auth__container-f {
-				form {
-					align-items: center;
+					font-size: 1vw;
 				}
 			}
 		}
