--- a/FrontEnd/src/styles/index.scss
+++ b/FrontEnd/src/styles/index.scss
@@ -1,17 +1,10 @@
 @import "./base/normalize";
 @import "./base/html";
-@import "./pages/notFound";
 @import "./base/colors";
-@import "./pages/auth";
+
+// Librerie esterne
 @import "animate.css";
-@import "bootstrap/dist/css/bootstrap.min.css";
-@import "./pages/navbar";
 @import "primeicons/primeicons.css";
-@import "./pages/principale";
-@import "./pages/utente";
-@import "./pages/formcards";
-@import "./pages/cards";
-@import "./pages/footer";
-@import "./components/bodyPrincipale";
-@import "./base/colors";
-@import "./base/settings";
+@import "primereact/resources/themes/lara-light-indigo/theme.css";
+@import "primereact/resources/primereact.css";
+@import "primeflex/primeflex.css";
